<resources>
    <string name="app_name" translatable="false">sNote</string>
    <string name="title_activity_note_creator">NoteCreator</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="new_notebook">New Notebook</string>
    <string name="title_activity_notebook_displayer">NotebookDisplayer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">sNote</string>
    <string name="nav_header_subtitle">A simple note taking tool</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="notebook_close">Close</string>

    <string name="menu_notebook">Notebook</string>
    <string name="menu_tags" translatable="false">Tags</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_create_link">Create Shortcut</string>
    <string name="startmenu_chooseFileToOpen">Choose a file to open</string>
    <string name="startmenu_or">Or</string>
    <string name="menu_help">Help</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="filecreation_create">Create</string>
    <string name="name_of_file">Name of file</string>
    <string name="toast_enter_name">Enter a name!</string>
    <string name="new_note">New Note</string>
    <string name="create">Create</string>
    <string name="toast_stt_started">Recording started...</string>
    <string name="toast_stt_stopped">Recording stopped</string>
    <string name="texteditor_enter_text">Enter text...</string>
    <string name="edit_link">Edit Link</string>
    <string name="edit_link_description">Edit the link below</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="text">Text</string>
    <string name="task">Task</string>
    <string name="link">Link</string>
    <string name="checkliste">Checklist</string>
    <string name="image_from_camera">Image from camera</string>
    <string name="enter_name">Enter a name</string>
    <string name="new_note_choose_type">Choose type</string>
    <string name="enter_link">Enter a link</string>
    <string name="tags_newTag">New Tag</string>
    <string name="tags_enter_tag_name">Enter a name for the tag</string>
    <string name="tags_are_you_sure">Are you sure?</string>
    <string name="tags_really_remove">Do you really want to remove the tag?</string>
    <string name="note_rename">Rename note</string>
    <string name="note_enter_new_name">Enter a new name</string>
    <string name="notebook_rename">Enter a new name for the notebook</string>
    <string name="toast_file_already_exists">File already exists</string>
    <string name="toast_file_succesfully_exported">File successfully exported</string>
    <string name="notebook_are_you_sure">Are you sure?</string>
    <string name="notebook_deleting_not_undone">Deleting this notebook cannot be undone</string>
    <string name="note_are_you_sure">Are you sure?</string>
    <string name="note_cannot_be_undone">This action cannot be undone!</string>
    <string name="checklist_enter_text">Enter text</string>
    <string name="checklist_add">Add</string>
    <string name="attachment_back">Back</string>
    <string name="start_menu_openExternal">Open external notebook</string>
    <string name="undo">Undo</string>
    <string name="checklist_removed_entry">Removed entry</string>
    <string name="help_checklist_heading">Checklists</string>
    <string name="help_checklist">-Edit an entry by clicking on it\n-Remove an entry by swiping from left to right on it\n-Links have to start with http or https\n-Only one link per entry is possible\n-Long click on an entry with link to open it in your default browser\n-The link is only opened if the entry is not edited</string>
    <string name="AddTag" translatable="false">+Tag</string>
    <string name="add">Add</string>
    <string name="tags_menu_info">Show/Hide Tags</string>
    <string name="attachments_export_success">Export successful</string>
    <string name="help_text">-Click on the microphone to insert the text you speak at the cursor position\n-To use this function, you need to allow the app to access the microphone!</string>
    <string name="help_text_heading">Text</string>
    <string name="help_tags_heading">Tags</string>
    <string name="help_tags">-Create a new tag with the \"+\" in the tag menu\n-Select one ore more tags in the tag menu, to show all notes with the selected tags\n-Every note got a tag symbol in its menu. Clicking on it will show/hide the tags\n-To assign a tag to a note click on the \"+Tag\"(Is hidden by default with the tags of the note)</string>
    <string name="help_links">-Edit the link, which is displayed above the WebView, by clicking on the pencil\n-Open the link in your browser by clicking on the symbol next to the pencil</string>
    <string name="help_links_heading">Links</string>
    <string name="help_attachments_heading">Attachments</string>
    <string name="help_attachments">-Save the attachments to your files by clicking on the download symbol</string>
    <string name="help_notes_heading">Notes</string>
    <string name="help_notes">-Create a new note with the \"+\" button\n-Long click on a note to open up a context menu</string>
    <string name="help_notebooks_heading">Notebooks</string>
    <string name="help_notebooks">-Close the current notebook in the 3 point menu at the top right\n-Long click on a notebook in the notebook menu to open up a context menu</string>
    <string name="help_extNotebooks_heading">External Notebooks</string>
    <string name="help_extNotebooks">-Moving, renaming or deleting the file removes the notebook from the notebook list</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="about_licenses_beginning">Below is a list of libraries,icons and so on sNote uses along with their respective license:</string>
    <string name="about_privacy_notice">Privacy Notice</string>
    <string name="about_about">This is an opensource app developed by e4rdx.</string>
    <string name="about_snote_license" translatable="false">MIT License\n \n Copyright (c) 2021 e4rdx\n \n Permission is hereby granted, free of charge, to any person obtaining a copy\n of this software and associated documentation files (the \"Software\"), to deal\n in the Software without restriction, including without limitation the rights\n to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n copies of the Software, and to permit persons to whom the Software is\n furnished to do so, subject to the following conditions:\n \n The above copyright notice and this permission notice shall be included in all\n copies or substantial portions of the Software.\n \n THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n SOFTWARE.</string>
    <string name="about_licenses_title">Opensource Licenses</string>
    <string name="about_privacy_notice_text">This app doesn\'t collect any personal data. Only preferences and notebooks are saved. The notebooks are containing everything you entered and all the attachments. Where you store them is up to you! But always remember: If you use external notebooks or if you export notebooks, other apps may access them!</string>
    <string name="about_source_info">The complete sourcecode is under following license available on Github:</string>
    <string name="about_link_github">To Github</string>
    <string name="about_link_website">To Website</string>
    <string name="toast_invalidName">Invalid name</string>
    <string name="prefs_show_tags_by_default">Show tags by default</string>
    <string name="menu_title_saveAs">Save as</string>
    <string name="menu_title_saveAndClose">Save and close</string>
    <string name="menu_title_addTag">Add tag</string>
    <string name="menu_title_stt">Speech to text</string>
    <string name="menu_title_edit">Edit</string>
    <string name="menu_title_open">Open</string>
    <string name="about_view_os_notices">Click to view opensource notices</string>
    <string name="drawing">Drawing</string>
    <string name="action_not_available">Action not available</string>
    <!-- Strings used for fragments for navigation -->

</resources>