<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notebook"
            android:icon="@drawable/ic_notebook"
            android:title="@string/menu_notebook" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_tag"
            android:title="@string/menu_tags" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_task"
            android:title="@string/menu_tasks" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_code"
            android:title="@string/menu_about" />
    </group>
</menu>