<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.notebookDisplayer.fragments.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_about"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/about_aboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_about"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_link_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_link_github"
                android:textColor="@color/link_blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_link_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_link_website"
                android:textColor="@color/link_blue"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/about_aboutText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_source_info"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_snoteLicenses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/about_snote_license"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </HorizontalScrollView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_privacy_notice"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_privacy_notice_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_licenses_title"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_licenses_beginning"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <WebView
                android:id="@+id/about_webview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>